<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sample_text">Text</string>
    <string name="msg_check_internet">Looks like you are offline, please check internet connectivity</string>
    <string name="error_contact_customer_care">Contact customer care:966626663</string>
    <string name="error_network">Api failed due to NetworkErrorException</string>
    <string name="error_model_message">No models found, Please Add New Model by clicking on
        the below Button
    </string>
    <string name="error_no_warranty">No Warranty for this product</string>
    <string name="error_no_products_for_favorites">No products found to add favorites</string>
    <string name="info_purchased_status">Status: %1$s</string>
    <string name="error_socket">Unable to process your request. Please try again</string>
    <string name="error_no_connectivity">Looks like you are offline, please check internet
        connectivity</string>
    <string name="sample_test">Sample test</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="bottom_option_customer">Customer</string>
    <string name="bottom_option_product">Product</string>
    <string name="bottom_option_special_instructions">Special Instructions </string>
    <string name="bottom_option_how_to_use">How to use</string>
    <string name="bottom_option_description">Description:</string>
    <string name="product_specification">Product Specification:</string>
    <string name="bottom_option_service">Support</string>
    <string name="bottom_option_satus_update">Satus Update</string>
    <string name="bottom_option_add_as_favorite">Add as favorite</string>
    <string name="bottom_option_return">Return</string>
    <string name="bottom_option_Call">Call</string>
    <string name="bottom_option_call_customer_care">Call customer care</string>
    <string name="bottom_option_find_service_center">Find service center</string>
    <string name="bottom_option_un_authorized">Non-Authorize</string>
    <string name="bottom_option_authorized">Authorize</string>
    <string name="bottom_option_service_request">Service request</string>
    <string name="bottom_option_location">Location</string>
    <string name="bottom_option_timings">Timings</string>
    <string name="label_receivers_phone_number">Receiver\'s phone number</string>
    <string name="bottom_option_info">Info</string>
    <string name="bottom_option_nick_name">Nick Name</string>
    <string name="bottom_option_location_change">Location Change</string>
    <string name="bottom_option_details">Details</string>
    <string name="bottom_option_note">Note</string>
    <string name="bottom_option_main_features">Main Features </string>
    <string name="bottom_option_warranty">Warranty </string>
    <string name="bottom_option_suggestions">Suggestions</string>
    <string name="bottom_option_product_name_edit">Product Name Edit</string>
    <string name="bottom_option_edit">Edit</string>
    <string name="bottom_option_bill">Bill</string>
    <string name="bottom_option_add">Add</string>
    <string name="bottom_option_past_history">Past History</string>
    <string name="bottom_option_share">Share</string>
    <string name="bottom_option_transfer">Transfer</string>
    <string name="bottom_option_feedback">Feedback </string>
    <string name="bottom_option_review">Review</string>
    <string name="bottom_option_track">Track</string>
    <string name="bottom_option_price">Price </string>
    <string name="bottom_option_mrp">MRP </string>
    <string name="bottom_option_delete">Delete</string>
    <string name="bottom_option_showroom">Showroom</string>
    <string name="bottom_option_buy_request">Buy request</string>
    <string name="dilog_delete">Are You Sure Delete Interested</string>
    <string name="bottom_option_return_policy">Return policy</string>
    <string name="bottom_option_request_installation">Request Installation</string>
    <string name="bottom_option_share_customer_location">Share Customer Location</string>
    <string name="bottom_option_share_customer_dispatches_on">Dispatches On</string>
    <string name="bottom_option_share_customer_dispatched">Dispatched</string>
    <string name="bottom_option_share_customer_delivered">Delivered</string>
    <string name="bottom_option_share_customer_installed">Installed</string>
    <string name="bottom_option_share_customer_return_product">Return Product</string>
    <string name="status_complaint">Complaint</string>
    <string name="status_received">Received</string>
    <string name="status_attending">Attending</string>
    <string name="status_checkup">Checkup</string>
    <string name="status_approval">Approval</string>
    <string name="status_repair_done">Repair Done</string>
    <string name="status_payment">Payment</string>
    <string name="status_feedback">Feedback</string>
    <string name="date_selecte">Selecte Date</string>
    <string name="time_selecte">Selecte Time</string>
    <string name="user_selecte">Selecte User</string>
    <string name="text_powered">POWERED BY CONNECT</string>
    <string name="text_customer_details">Customer Details</string>
    <string name="text_product_details">Product Details</string>
    <string name="text_bill_details">Bill Details</string>
    <string name="text_invoice">INVOICE</string>
    <string name="text_date_of_purchase">Date of purchase</string>
    <string name="text_bill_id">Bill ID</string>
    <string name="text_invoice_no">Invoice No</string>
    <string name="text_showroom_details">Showroom Details</string>
    <string name="text_product_name">Product name</string>
    <string name="text_model_no">Model No</string>
    <string name="text_s_n">S/N</string>
    <string name="text_price">Price</string>
    <string name="bill_value">: %1$s</string>
    <string name="label_colon">:</string>
    <string name="action_request_pending">Request pending</string>
    <string name="action_accept">Accept</string>
    <string name="action_hold">Hold</string>
    <string name="action_reject">Reject</string>
    <string name="action_add_as_favorite">Add as favorite</string>
    <string name="action_filters">Filters</string>
    <string name="action_brand">Brand</string>
    <string name="action_modelno">Model No</string>
    <string name="action_division">Division</string>
    <string name="action_category">Category</string>
    <string name="action_price">Price :</string>
    <string name="action_batchno">Batch No :</string>
    <string name="action_serialno">Serial No :</string>
    <string name="action_submit">Submit</string>
    <string name="action_feedback_hint">Enter your feedback here</string>
    <string name="action_suggestions_hint">Enter your suggestions here(It will be displayed to the manufacturer only)</string>
    <string name="action_otp">OTP</string>
    <string name="action_qr_code">QR Code Scan</string>
    <string name="action_manual_entry">Manual Enter</string>
    <string name="dialog_warranty_registered_successfully">Warranty has been registered
        successfully</string>
    <string name="action_product_status">Is product delivered</string>
    <string name="action_extended_Warranty"> Extended Warranty</string>
    <string name="action_description">Description</string>
    <string name="action_skip">Skip</string>
    <string name="action_male">Male</string>
    <string name="action_female">Female</string>
    <string name="label_expired">Expired</string>
    <string name="label_product_status">Product delivery status</string>
    <string name="label_service_requests">Service Requests</string>
    <string name="user_qr_code">User QR code</string>
    <string name="user_uid">User UID</string>
    <string name="title_assigned_successfully">Assigned SuccessFully</string>
    <string name="action_enter_customer_phone_number">Phone number</string>
    <string name="action_or">OR</string>
    <string name="action_scanuid">Scan Product UID</string>
    <string name="action_entermobilenumber">Enter Mobile Number</string>
    <string name="title_user_qr_code">Place user qr code to scan</string>
    <string name="title_warranty_serial_barcode">Place user  Serial no Barcode</string>
    <string name="title_warranty_batch_barcode">Place user Batch no Barcode</string>
    <string name="action_enter_transfer_phone_number">Transfer Phone number</string>
    <string name="hint_product_assigned_success">Assigned SuccessFully</string>
    <string name="add_an_offer_brand_hint">Brand</string>
    <string name="add_an_offer_division_hint">Division</string>
    <string name="add_an_offer_model_hint">Model</string>
    <string name="add_an_offer_on_mrp_hint">Add An Offer On MRP: %</string>
    <string name="add_an_offer_date_hint">Offer Start On</string>
    <string name="offer_expires_hint">Offer Expires On</string>
    <string name="scan_start_date_hint">Scan Start Date</string>
    <string name="scan_end_date_hint">Scan End Date</string>
    <string name="action_no_data">No data to show</string>
    <string name="action_add_product">Add Product</string>
    <string name="action_changepassword">CHANGE PASSWORD</string>
    <string name="action_add_location">Location</string>
    <string name="action_back">Back</string>
    <string name="action_change">Change</string>
    <string name="action_next">Next</string>
    <string name="action_login">Login</string>
    <string name="action_registration">Register</string>
    <string name="action_ok">Ok</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_cancel_request">Cancel Request</string>
    <string name="action_past_history">Past History</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_register">Register</string>
    <string name="action_continue">continue</string>
    <string name="action_register_parentof_child">I am a parent of a child with asthma</string>
    <string name="action_register_individual">I am an individual over the age of 16\n managing my own asthma</string>
    <string name="action_verify">verify</string>
    <string name="action_view_full_library">View full library</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_start">Start</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_request_call">Request Call</string>
    <string name="action_call">Call</string>
    <string name="action_take_new_survey">take new survey</string>
    <string name="action_save">save</string>
    <string name="action_high">High</string>
    <string name="action_medium">Medium</string>
    <string name="action_low">Low</string>
    <string name="time_10_12">10-12</string>
    <string name="time_12_15">12-15</string>
    <string name="time_15_17">15-17</string>
    <string name="changepassword_title">Change Password</string>
    <string name="changepassword_subtitle">You must change your password for future use.</string>
    <string name="changepassword_confirmpassword_hint">Confirm Password</string>
    <string name="changepassword_new_password_hint">Enter new Password</string>
    <string name="add_new_warrnty_period">Warranty Period</string>
    <string name="user_comment_hint">Comment</string>
    <string name="hint_problem_details">Problem details</string>
    <string name="hint_time">Time</string>
    <string name="hint_date">Date</string>
    <string name="hint_usres">Users</string>
    <string name="title_history">History</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_scan">Scan</string>
    <string name="title_status">Status</string>
    <string name="action_years">years</string>
    <string name="action_months">months</string>
    <string name="action_days">days</string>
</resources>