<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_tab_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/action_buy_requests_favorites"
        android:checked="true"
        android:icon="@drawable/ic_tab_favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/scan_text_icon"
        android:title="@string/title_scan" />
    <item
        android:id="@+id/action_offers_status"
        android:icon="@drawable/ic_tab_offers1"
        android:title="@string/title_status" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_tab_notifications"
        android:title="@string/title_notifications" />

</menu>