<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="modelResponse"
            type="com.incon.connect.user.apimodel.components.status.ServiceStatus" />
    </data>

    <RelativeLayout
        android:id="@+id/layout_return_item"
        style="@style/MatchWrap"
        android:background="@drawable/list_item_selector"
        android:padding="@dimen/margin_5">

        <TextView
            android:id="@+id/name_tv"
            style="@style/BothWrap"
            android:layout_marginTop="@dimen/margin_8"
            android:textColor="@color/black"
            android:textSize="12.4sp" />

        <HorizontalScrollView
            android:id="@+id/status_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_tv"
            android:layout_centerHorizontal="true"
            android:scrollbarSize="4dp"
            android:scrollbarThumbHorizontal="@drawable/scrollbar"
            android:scrollbars="horizontal">

            <LinearLayout
                android:id="@+id/status_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/approval_views_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/status_scrollview">

            <Button
                android:id="@+id/button_accept"
                style="@style/style_submit_button"
                android:layout_weight="1"
                android:text="@string/action_accept" />

            <Button
                android:id="@+id/button_hold"
                style="@style/style_submit_button"
                android:layout_weight="1"
                android:text="@string/action_hold" />

            <Button
                android:id="@+id/button_reject"
                style="@style/style_submit_button"
                android:layout_weight="1"
                android:text="@string/action_reject" />
        </LinearLayout>

    </RelativeLayout>
</layout>