<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        style="@style/MatchWrap"
        android:background="@drawable/dialog_background">
        <!--     &lt;!&ndash; spinner service centers &ndash;&gt;
             <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                 android:id="@+id/spinner_service"
                 style="@style/spinnerItemStyle"
                 android:layout_marginTop="@dimen/margin_10"
                 android:focusable="true"
                 android:hint="@string/hint_service_center"
                 app:errorEnabled="true"
                 app:met_floatingLabel="highlight"
                 app:met_textColor="@color/colorForgotPasswordHintText"
                 app:met_textColorHint="@color/colorForgotPasswordHintText" />-->
        <!-- spinner service centers -->
        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_users"
            style="@style/spinnerItemStyle"
            android:layout_marginTop="@dimen/margin_10"
            android:focusable="true"
            android:hint="@string/hint_usres"
            app:errorEnabled="true"
            app:met_floatingLabel="highlight"
            app:met_textColor="@color/colorForgotPasswordHintText"
            app:met_textColorHint="@color/colorForgotPasswordHintText" />

        <LinearLayout
            android:id="@+id/problem_layout"
            style="@style/MatchWrap"
            android:layout_below="@+id/spinner_users"
            android:orientation="vertical">
            <!-- spinner -->
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinner_problem"
                style="@style/spinnerItemStyle"
                android:layout_marginTop="@dimen/margin_10"
                android:focusable="true"
                app:errorEnabled="true"
                app:met_floatingLabel="highlight"
                app:met_textColor="@color/colorForgotPasswordHintText"
                app:met_textColorHint="@color/colorForgotPasswordHintText" />

            <EditText
                android:id="@+id/edittext_others_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_42"
                android:layout_marginStart="@dimen/margin_42"
                android:layout_marginTop="-6.5dp"
                android:background="@drawable/bg_rectangle_edittext"
                android:hint="@string/hint_problem_details" />

        </LinearLayout>
        <!-- edit text comment -->
        <com.incon.connect.user.custom.view.CustomTextInputLayout
            android:id="@+id/input_comment"
            style="@style/Register_TextInputLayout"
            android:layout_below="@+id/problem_layout"
            android:layout_marginTop="10dp"
            android:hint="@string/user_comment_hint"
            app:errorEnabled="true"
            app:fontName="fonts/OpenSans-Regular.ttf"
            app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_comment"
                style="@style/Register_TextInputEditText"
                android:focusable="true"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="@integer/character_limit_200"
                android:maxLines="1"
                android:paddingEnd="2dp"
                android:paddingStart="2.1dp" />
        </com.incon.connect.user.custom.view.CustomTextInputLayout>

        <!-- Date picker -->
        <com.incon.connect.user.custom.view.CustomTextInputLayout
            android:id="@+id/input_layout_date"
            style="@style/Register_TextInputLayout"
            android:layout_below="@id/input_comment"
            android:hint="@string/hint_date"
            app:errorEnabled="true"
            app:fontName="fonts/OpenSans-Regular.ttf"
            app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_date"
                style="@style/Register_TextInputEditText"
                android:enabled="false" />
        </com.incon.connect.user.custom.view.CustomTextInputLayout>

        <!--dummy view for date click event -->
        <View
            android:id="@+id/view_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/input_layout_date"
            android:layout_alignEnd="@+id/input_layout_date"
            android:layout_alignStart="@+id/input_layout_date"
            android:layout_alignTop="@+id/input_layout_date"
            android:background="@null" />

        <!-- time picker -->
        <com.incon.connect.user.custom.view.CustomTextInputLayout
            android:id="@+id/input_layout_time"
            style="@style/Register_TextInputLayout"
            android:layout_below="@id/input_layout_date"
            android:hint="@string/hint_time"
            app:errorEnabled="true"
            app:fontName="fonts/OpenSans-Regular.ttf"
            app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_time"
                style="@style/Register_TextInputEditText"
                android:enabled="false" />
        </com.incon.connect.user.custom.view.CustomTextInputLayout>

        <!--dummy view for time click event -->
        <View
            android:id="@+id/view_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/input_layout_time"
            android:layout_alignEnd="@+id/input_layout_time"
            android:layout_alignStart="@+id/input_layout_time"
            android:layout_alignTop="@+id/input_layout_time"
            android:background="@null" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/MatchWrap"
            android:layout_below="@+id/input_layout_time"
            android:layout_marginEnd="@dimen/margin_42"
            android:layout_marginStart="@dimen/margin_42"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/zerowrap"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/action_high"
                android:textSize="12sp"
                app:fontName="fonts/OpenSans-Regular.ttf" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/zerowrap"
                android:layout_weight="1"
                android:tag="2"
                android:checked="true"
                android:text="@string/action_medium"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/zerowrap"
                android:layout_weight="1"
                android:tag="3"
                android:text="@string/action_low"
                android:textSize="12sp" />
        </RadioGroup>

        <!-- layout for bottom buttons -->
        <include
            android:id="@+id/include_register_bottom_buttons"
            layout="@layout/view_registration_bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_below="@id/radioGroup" />

    </RelativeLayout>
</layout>