<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="password"
            type="com.incon.connect.user.dto.changepassword.Password"/>

        <variable
            name="activity"
            type="com.incon.connect.user.ui.changepassword.ChangePasswordActivity"/>
    </data>

    <RelativeLayout
        style="@style/BothMatch"
        >

        <RelativeLayout
            android:id="@+id/relative_change_password"
            style="@style/MatchWrap"
            android:layout_centerInParent="true"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp">


            <ImageView
                android:id="@+id/app_logo"
                style="@style/BothWrap"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_20"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_connect_logo_svg"
                />

            <TextView
                android:id="@+id/text_change_password_title"
                style="@style/BothWrap"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_below="@id/app_logo"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/changepassword_title"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="21.1sp"
                />

            <TextView
                android:id="@+id/text_change_password_subtitle"
                style="@style/BothWrap"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_below="@id/text_change_password_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/changepassword_subtitle"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="11.5sp"
                />

            <!-- input layout for enter new password -->
            <com.incon.connect.user.custom.view.CustomTextInputLayout
                android:id="@+id/input_layout_enter_newpassword"
                style="@style/MatchWrap"
                android:layout_below="@id/text_change_password_subtitle"
                android:layout_marginTop="30dp"
                android:hint="@string/changepassword_new_password_hint"
                android:textColorHint="@color/colorForgotPasswordHintText"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_enter_newpassword"
                    style="@style/MatchWrap"
                    android:inputType="textPassword"
                    android:maxLength="@integer/character_limit_200"
                    android:maxLines="1"
                    android:tag="0"
                    android:text="@={password.newPassword}"
                    android:textColor="@color/colorForgotPasswordHintText"
                    android:textSize="14sp"/>
            </com.incon.connect.user.custom.view.CustomTextInputLayout>
            <!--android:layout_marginTop="20dp"-->
            <com.incon.connect.user.custom.view.CustomTextInputLayout
                android:id="@+id/input_layout_confirm_password"
                style="@style/MatchWrap"
                android:layout_below="@id/input_layout_enter_newpassword"
                android:hint="@string/changepassword_confirmpassword_hint"
                android:textColorHint="@color/colorForgotPasswordHintText"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_confirm_password"
                    style="@style/MatchWrap"
                    android:inputType="textPassword"
                    android:maxLength="@integer/character_limit_200"
                    android:maxLines="1"
                    android:tag="1"
                    android:text="@={password.confirmPassword}"
                    android:textColor="@color/colorForgotPasswordHintText"
                    android:textSize="14sp"/>

            </com.incon.connect.user.custom.view.CustomTextInputLayout>

            <!-- change password button -->
            <Button
                android:id="@+id/button_login"
                style="@style/MatchWrap"
                fontPath="fonts/OpenSans-Bold.ttf"
                android:layout_below="@id/input_layout_confirm_password"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_blue_selector"
                android:letterSpacing="0.07"
                android:onClick="@{() -> activity.onChangePasswordClick()}"
                android:text="@string/action_changepassword"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13.4sp"/>
        </RelativeLayout>


    </RelativeLayout>

</layout>
